--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -50,11 +50,11 @@ $(ARCHDIR)/crtn.o \
 .PHONY: all clean install install-headers install-kernel
 .SUFFIXES: .o .c .S
 
-all: tynvos.kernel
+all: tyn.kernel
 
-tynvos.kernel: $(OBJS) $(ARCHDIR)/linker.ld
+tyn.kernel: $(OBJS) $(ARCHDIR)/linker.ld
 	$(CC) -T $(ARCHDIR)/linker.ld -o $@ $(CFLAGS) $(LINK_LIST)
-	grub-file --is-x86-multiboot tynvos.kernel
+	grub-file --is-x86-multiboot tyn.kernel
 
 $(ARCHDIR)/crtbegin.o $(ARCHDIR)/crtend.o:
 	OBJ=`$(CC) $(CFLAGS) $(LDFLAGS) -print-file-name=$(@F)` && cp "$$OBJ" $@
@@ -66,7 +66,7 @@ $(ARCHDIR)/crtbegin.o $(ARCHDIR)/crtend.o:
 	$(CC) -MD -c $< -o $@ $(CFLAGS) $(CPPFLAGS)
 
 clean:
-	rm -f tynvos.kernel
+	rm -f tyn.kernel
 	rm -f $(OBJS) *.o */*.o */*/*.o
 	rm -f $(OBJS:.o=.d) *.d */*.d */*/*.d
 
@@ -76,8 +76,8 @@ install-headers:
 	mkdir -p $(DESTDIR)$(INCLUDEDIR)
 	cp -R --preserve=timestamps include/. $(DESTDIR)$(INCLUDEDIR)/.
 
-install-kernel: tynvos.kernel
+install-kernel: tyn.kernel
 	mkdir -p $(DESTDIR)$(BOOTDIR)
-	cp tynvos.kernel $(DESTDIR)$(BOOTDIR)
+	cp tyn.kernel $(DESTDIR)$(BOOTDIR)
 
 -include $(OBJS:.o=.d)
